fix: button spacing

--- a/src/styles/_press.scss
+++ b/src/styles/_press.scss
@@ -25,6 +25,11 @@
       margin-right: 8px;
       margin-left: -8px;
     }
+    &.large {
+      span {
+        padding-right: 8px;
+      }
+    }
   }
 
 .press-illustration {
